Separating the navigation menu into a separate file and connecting in with a script menu.js

--- a/Project/RegistrationForm.html
+++ b/Project/RegistrationForm.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Rejestracja</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script src="registrationScript.js"></script>
+    <script src="menu.js"></script>
 </head>
 <body>
-    <h1>Rejestracja użytkownika</h1>
+    <header>
+        <div id="placeForNavbar"></div>
+        <h1>Rejestracja użytkownika</h1>
+    </header>
     <form novalidate name="myForm" onsubmit="return validateForm()" method="post">
 
         <div>
