--- a/Project/index.html
+++ b/Project/index.html
@@ -5,17 +5,12 @@
     <meta charset="UTF-8">
     <title>Broda i Wąsy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <script src="menu.js"></script>
 </head>
 <body>
     <header>
-
-        <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="">O nas</a>
-            <a href="">Usługi</a>
-            <a href="">Kontakt</a>
-        </nav>
-
+        <div id="placeForNavbar"></div>
         <h1>Barbershop „Broda i Wąsy”</h1>
     </header>
 
@@ -89,7 +84,7 @@
                 </ul>
                 <p>Główne zainteresowania</p>
                 <ol>
-                    <li>Street art i graffiti</li>
+                    <li>Street art oraz graffiti</li>
                     <li>Sporty ekstremalne (skateboarding, BMX)</li>
                     <li>Gotowanie i kulinarne eksperymenty</li>
                 </ol>
