--- a/Project/RegistrationForm.html
+++ b/Project/RegistrationForm.html
@@ -6,69 +6,90 @@
     <link rel="stylesheet" href="styles.css">
     <script src="registrationScript.js"></script>
     <script src="menu.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header>
         <div id="placeForNavbar"></div>
         <h1>Rejestracja użytkownika</h1>
     </header>
-    <form novalidate name="myForm" onsubmit="return validateForm()" method="post">
+    <main class="registration_container">
+        <form novalidate name="myForm" onsubmit="return validateForm()" method="post">
 
-        <div>
-            <label for="fname">Imię:</label><br>
-            <input type="text" id="fname" name="fname" required placeholder="Twoje imię"><br>
-            <span id="fnameError" class="error-msg"></span>
-        </div>
+            <div class="form_row">
 
 
-
-        <div>
-            <label for="lname">Nazwisko:</label><br>
-            <input type="text" id="lname" name="lname" required placeholder="Twoje nazwisko"><br>
-            <span id="lnameError" class="error-msg"></span>
-        </div>
+                <div class="form_group">
+                    <label for="fname">Imię:</label><br>
+                    <input type="text" id="fname" name="fname" required placeholder="Twoje imię"><br>
+                    <span id="fnameError" class="error-msg"></span>
+                </div>
 
 
 
-        <div>
-            <label for="bdate">Data urodzenia:</label><br>
-            <input type="date" id="bdate" name="bdate"><br>
-            <span id="bdateError" class="error-msg"></span>
-        </div>
+                <div class="form_group">
+                    <label for="lname">Nazwisko:</label><br>
+                    <input type="text" id="lname" name="lname" required placeholder="Twoje nazwisko"><br>
+                    <span id="lnameError" class="error-msg"></span>
+                </div>
 
 
 
-        <div>
-            <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email" required><br>
-            <span id="emailError" class="error-msg"></span>
-        </div>
+                <div class="form_group">
+                    <label for="bdate">Data urodzenia:</label><br>
+                    <input type="date" id="bdate" name="bdate"><br>
+                    <span id="bdateError" class="error-msg"></span>
+                </div>
 
 
-        <div>
-            <label for="phone">Telefon:</label><br>
-            <input type="text" id="phone" name="phone" required><br>
-            <span id="phoneError" class="error-msg"></span>
-        </div>
+            </div>
 
 
-        <div>
-            <label for="source">Skąd o nas usłyszałeś?</label><br>
-            <select id="source" name="source" required>
-                <option value="">-- Wybierz --</option>
-                <option value="sm">Media społecznościowe</option>
-                <option value="friend">Od znajomego</option>
-                <option value="ad">Reklama</option>
-                <option value="other">Inne</option>
-            </select>
-            <span id="sourceError" class="error-msg"></span>
-        </div>
+            <div class="form_row">
 
-        <button type="submit">Zarejestruj się</button>
-        <span id="sumErr"></span>
-
-    </form>
+                <div class="form_group">
+                    <label for="email">Email:</label><br>
+                    <input type="text" id="email" name="email" required><br>
+                    <span id="emailError" class="error-msg"></span>
+                </div>
 
 
+                <div class="form_group">
+                    <label for="phone">Telefon:</label><br>
+                    <input type="text" id="phone" name="phone" required><br>
+                    <span id="phoneError" class="error-msg"></span>
+                </div>
+
+            </div>
+
+
+
+            <div class="form_row">
+
+                <div class="form_group full-width">
+                    <label for="source">Skąd o nas usłyszałeś?</label><br>
+                    <select id="source" name="source" required>
+                        <option value="">-- Wybierz --</option>
+                        <option value="sm">Media społecznościowe</option>
+                        <option value="friend">Od znajomego</option>
+                        <option value="ad">Reklama</option>
+                        <option value="other">Inne</option>
+                    </select>
+                    <span id="sourceError" class="error-msg"></span>
+                </div>
+
+            </div>
+
+
+
+
+            <div class="form_action">
+                <button type="submit">Zarejestruj się</button>
+
+            </div>
+            <span id="sumErr"></span>
+        </form>
+    </main>
+<div id="placeForFooter"></div>
 </body>
 </html>
