--- a/Project/index.html
+++ b/Project/index.html
@@ -6,7 +6,7 @@
     <title>Broda i Wąsy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <script src="menu.js"></script>
+    <script src="menu.js" defer></script>
 </head>
 <body>
     <header>
@@ -136,16 +136,7 @@
     </main>
 
 
-
-    <footer>
-        <p>Author: Oleh Korsun</p>
-        <p><a href="mailto:nonexisting@gmail.com">Write to me!</a></p>
-        <p>Obserwuj nas:</p>
-        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <p>&copy; 2025 Oleh Korsun. Wszelkie prawa zastrzeżone.</p>
-    </footer>
+        <div id="placeForFooter"></div>
 
 
     <button class="scrollTopBtn" title="Wróć na górę">
