--- a/Project/nav.html
+++ b/Project/nav.html
@@ -1,7 +1,7 @@
 <nav>
     <a href="index.html">Strona główna</a>
-    <a href="">O nas</a>
-    <a href="">Usługi</a>
-    <a href="">Kontakt</a>
+    <a href="http://localhost">O nas</a>
+    <a href="http://localhost">Usługi</a>
+    <a href="http://localhost">Kontakt</a>
     <a href="RegistrationForm.html">Rejestracja</a>
 </nav>
