Adding static html page templtates for future migration

--- a/Project/RegistrationForm.html
+++ b/Project/RegistrationForm.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+<div id="placeForNavbar"></div>
     <header>
-        <div id="placeForNavbar"></div>
         <h1>Rejestracja użytkownika</h1>
     </header>
     <main class="registration_container">
@@ -49,14 +49,14 @@
 
                 <div class="form_group">
                     <label for="email">Email:</label><br>
-                    <input type="text" id="email" name="email" required><br>
+                    <input type="text" id="email" name="email" required placeholder="przyklad@gmail.com"><br>
                     <span id="emailError" class="error-msg"></span>
                 </div>
 
 
                 <div class="form_group">
                     <label for="phone">Telefon:</label><br>
-                    <input type="text" id="phone" name="phone" required><br>
+                    <input type="text" id="phone" name="phone" required placeholder="+1234567890"><br>
                     <span id="phoneError" class="error-msg"></span>
                 </div>
 
